--- a/Algorithm.vcxproj.filters
+++ b/Algorithm.vcxproj.filters
@@ -2931,5 +2931,8 @@
     <ClCompile Include="Baekjoon\97.Rank\0.Bronze\23825.cpp">
       <Filter>Baekjoon\97.Rank\0.Bronze</Filter>
     </ClCompile>
+    <ClCompile Include="Baekjoon\5.BinarySearch\2.Gold\1561.cpp">
+      <Filter>Baekjoon\5.BinarySearch\2.Gold</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
