--- a/Algorithm.vcxproj.filters
+++ b/Algorithm.vcxproj.filters
@@ -2940,5 +2940,8 @@
     <ClCompile Include="Baekjoon\1.DynamicProgramming\1.Silver\9656.cpp">
       <Filter>Baekjoon\1.DynamicProgramming\1.Silver</Filter>
     </ClCompile>
+    <ClCompile Include="Baekjoon\14.Tree\1.Silver\9372.cpp">
+      <Filter>Baekjoon\14.Tree\1.Silver</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
