--- a/Algorithm.vcxproj.filters
+++ b/Algorithm.vcxproj.filters
@@ -2988,5 +2988,8 @@
     <ClCompile Include="Baekjoon\0.DataStructure\2.Gold\17435.cpp">
       <Filter>Baekjoon\0.DataStructure\2.Gold</Filter>
     </ClCompile>
+    <ClCompile Include="Baekjoon\97.Rank\0.Bronze\1225.cpp">
+      <Filter>Baekjoon\97.Rank\0.Bronze</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
