--- a/Algorithm.vcxproj.filters
+++ b/Algorithm.vcxproj.filters
@@ -3009,5 +3009,11 @@
     <ClCompile Include="Baekjoon\14.Tree\2.Gold\12837.cpp">
       <Filter>Baekjoon\14.Tree\2.Gold</Filter>
     </ClCompile>
+    <ClCompile Include="Baekjoon\10.Dijkstra\1.Silver\18352.cpp">
+      <Filter>Baekjoon\10.Dijkstra\1.Silver</Filter>
+    </ClCompile>
+    <ClCompile Include="Baekjoon\97.Rank\2.Gold\23290.cpp">
+      <Filter>Baekjoon\97.Rank\2.Gold</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
