--- a/Algorithm.vcxproj.filters
+++ b/Algorithm.vcxproj.filters
@@ -3033,5 +3033,8 @@
     <ClCompile Include="Baekjoon\1.DynamicProgramming\2.Gold\2629.cpp">
       <Filter>Baekjoon\1.DynamicProgramming\2.Gold</Filter>
     </ClCompile>
+    <ClCompile Include="Baekjoon\97.Rank\0.Bronze\6778.cpp">
+      <Filter>Baekjoon\97.Rank\0.Bronze</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
