--- a/Algorithm.vcxproj.filters
+++ b/Algorithm.vcxproj.filters
@@ -3051,5 +3051,8 @@
     <ClCompile Include="Baekjoon\0.DataStructure\2.Gold\2696.cpp">
       <Filter>Baekjoon\0.DataStructure\2.Gold</Filter>
     </ClCompile>
+    <ClCompile Include="Baekjoon\97.Rank\0.Bronze\1547.cpp">
+      <Filter>Baekjoon\97.Rank\0.Bronze</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
