--- a/Algorithm.vcxproj.filters
+++ b/Algorithm.vcxproj.filters
@@ -3609,6 +3609,9 @@
     <ClCompile Include="Baekjoon\4.BFS\2.Gold\6087.cpp">
       <Filter>Baekjoon\4.BFS\2.Gold</Filter>
     </ClCompile>
+    <ClCompile Include="Baekjoon\6.Bruteforce\1.Silver\2961.cpp">
+      <Filter>Baekjoon\6.Bruteforce\1.Silver</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Baekjoon\97.Rank\0.Bronze\13277.py">
