--- a/Algorithm.vcxproj.filters
+++ b/Algorithm.vcxproj.filters
@@ -3633,6 +3633,9 @@
     <ClCompile Include="Baekjoon\97.Rank\1.Silver\1388.cpp">
       <Filter>Baekjoon\97.Rank\1.Silver</Filter>
     </ClCompile>
+    <ClCompile Include="Baekjoon\97.Rank\2.Gold\9661.cpp">
+      <Filter>Baekjoon\97.Rank\2.Gold</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Baekjoon\97.Rank\0.Bronze\13277.py">
